traefik-letsencrypt/deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: letsencrypt
  name: traefik-letsencrypt
  labels:
    app: traefik-letsencrypt

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-letsencrypt
  template:
    metadata:
      labels:
        app: traefik-letsencrypt
      namespace: letsencrypt
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.0
          args:
            - --api.insecure
            - --accesslog
            - --entrypoints.web.Address=:8000
            - --entrypoints.websecure.Address=:4443
            - --providers.kubernetescrd
            - --certificatesresolvers.default.acme.tlschallenge
            - --certificatesresolvers.default.acme.email=foo@you.com
            - --certificatesresolvers.default.acme.storage=acme.json
            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            - --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: web
              containerPort: 8000
            - name: websecure
              containerPort: 4443
            - name: admin
              containerPort: 8080

---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: letsencrypt
  name: whoami-letsencrypt
  labels:
    app: whoami-letsencrypt

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-letsencrypt
  template:
    metadata:
      labels:
        app: whoami-letsencrypt
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80
