traefik-letsencrypt/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-letsencrypt

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 4443
  selector:
    app: traefik-letsencrypt

---
apiVersion: v1
kind: Service
metadata:
  name: whoami-letsencrypt

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami-letsencrypt
