traefik-letsencrypt/ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: letsencrypt
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`dev.moneycol.ml`) && PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami-letsencrypt
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: letsencrypt
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dev.moneycol.ml`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami-letsencrypt
      port: 80
  tls:
    certResolver: default
